Create page skeleton
Created a general outline of the game with just html and css.
I added a folder of 3 imgaes which will hold the equivalent of
the rock paper and scissors.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,34 @@
     <title>Rock Paper Scissors</title>
 </head>
 <body>
-    <h1>Rock Paper Scissors</h1>
+    <div class="header">
+        <div class = "title">Elemental</div>
+        <div class="sub-title"> Rock Paper Scissors but better</div>
+    </div>
+
+    <div class="game">
+        <div class="human">
+            <div class="name">YOU:</div>
+            <div class="score">0</div>
+            <img class="chosen" src="/images/fire.png">
+
+            <div class="choices">
+                <img src="/images/fire.png">
+                <img src="/images/leaf.png">
+                <img src="/images/water.png">
+            </div>
+        </div>
+
+        <div class="cpu">
+            <div class="name">CPU:</div>
+            <div class="score">0</div>
+            <img class="chosen" src="/images/fire.png">
+        </div>
+    </div>
+
+    <div class = "anounce">
+        <div>Rock beats paper! Point to CPU</div>
+    </div>
+    
 </body>
 </html>
