--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
             <div class="name">YOU:</div>
             <div class="score" id="hScore"><div>0</div></div>
             <div class="choices" id="human-choices">
-                <img class = "human-img" id="one" src="water.png">
-                <img class = "human-img" id="two"src="leaf.png">
-                <img class = "human-img" id="three"src="fire.png">
+                <img class = "human-img" id="one" src=".water.png">
+                <img class = "human-img" id="two"src=".leaf.png">
+                <img class = "human-img" id="three"src=".fire.png">
             </div>
         </div>
 
@@ -34,9 +34,9 @@
             <div class="name">CPU:</div>
             <div class="score" id="cScore"><div>0</div></div>
             <div class="choices" id="cpu-choices">
-                <img class = "cpu-img" id="one-c" src="water.png">
-                <img class = "cpu-img" id="two-c"src="leaf.png">
-                <img class = "cpu-img" id="three-c" src="fire.png">
+                <img class = "cpu-img" id="one-c" src=".water.png">
+                <img class = "cpu-img" id="two-c"src=".leaf.png">
+                <img class = "cpu-img" id="three-c" src=".fire.png">
             </div>
         </div>
     </div>
