--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <div class="name">YOU:</div>
             <div class="score" id="hScore"><div>0</div></div>
             <div class="choices" id="human-choices">
-                <img class = "human-img" id="one" src="water.png">
+                <img class = "human-img" id="one" src="/images/water.png">
                 <img class = "human-img" id="two"src="leaf.png">
                 <img class = "human-img" id="three"src="fire.png">
             </div>
